changeLog
=================================================================================
Learning Changes
=================================================================================
1. commit-1: Learnt setState and wrote code to understand it.
2. commit-2: Render same element multiple times using map and why is key used in map.
4. commit-4: learning LifeCycle
=================================================================================
Making App Changes
=================================================================================
3. commit-3: Calling open source jsonplacholder API for getting the names of monsters
5. commit-5: Added Searchbox to filter option. Used .map function and if condition to get the result
=================================================================================